# Aurora

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: build.yml  release.yml
assets/: aurora.desktop
crates/aurora-client/: Cargo.toml
crates/aurora-client/src/: main.rs  ws_client.rs
crates/aurora-client/ui/: app.slint
crates/aurora-common/: Cargo.toml
crates/aurora-common/src/: lib.rs
crates/aurora-server/: Cargo.toml
crates/aurora-server/src/: agent.rs  client.rs  config.rs  deneb.rs  main.rs  types.rs  ws.rs
crates/aurora-server/src/preprocessing/: html_preprocess.rs  mod.rs  web_content.rs
crates/aurora-server/src/tools/: bash.rs  file.rs  mod.rs  ripgrep_native.rs
installer/windows/: setup.iss
patches/: fix-facts-parsing.patch
scripts/: build.sh
src/: agent.rs  client.rs  config.rs  dreaming.rs  main.rs  types.rs
src/preprocessing/: html_preprocess.rs  mod.rs  telegram.rs  web_content.rs
src/tools/: bash.rs  deneb.rs  mod.rs  ripgrep_native.rs  search.rs  telegram.rs  web_fetch.rs
ui/: app.slint
